# cgm

./: .gitignore  LICENSE  env.yml  pyproject.toml  readme.md
cgm/: cgm.py  model.py  utils.py
esm3/: cgm_esm3.py  esm_env.yml  readme.md
gemma/: cgm_gemma.py  gemma_env.yml  get_log_probs.py  readme.md
gemma/example_generations/: post_samples.txt  pre_samples.txt
genie2/: calibrate_genie2.py  classify_secstruct_cath.py  genie_score_network.py  readme.md  secstruct.py
genie2/genie/utils/: affine_utils.py  model_io.py
genie2/genie2/genie/sampler/: base.py
neural_sde/: gmm_example.ipynb  gmm_utils.py  neural_sde.py  plotting.py  utils.py
neural_sde/synthetic_experiments/: N_exp.py  lambda_exp.py  readme.md
neural_sde/synthetic_experiments/inc_dim/: increase_dim_relax.py  increase_dim_reward.py
neural_sde/synthetic_experiments/rare_event/: rare_event_relax.py  rare_event_reward.py
tarflow/: calibrate_tarflow.py  compute_fid.py  normalizing_flow.py  readme.md  tarflow_map.py  utils.py  weight_dict_afhq.pt
tarflow/ml_tarflow/: README.md  evaluate_bpd.py  evaluate_fid.py  prepare_fid_stats.py  requirements.txt  sample.ipynb  train.py  train_local.ipynb  transformer_flow.py  utils.py
tests/: test_cgm.py
tinystories/: post_samples.txt  pre_samples.txt
